@@ -14,6 +14,7 @@ PostGIS 2.5.0
   - #3885, version number removed from address_standardize lib file
   - #3893, raster support functions can only be loaded in the same schema
            with core PostGIS functions.
+  - #4035, remove dummy pgis_abs type from aggregate/collect routines. 
 
 * Enhancements and Fixes*
   - #3944, Update to EPSG register v9.2 (Even Rouault)
